[tool.poetry]
name = "hodlclaim"
version = "0.1.0"
description = "This bot will claim your BNB rewards from the HODL token every day automatically"
authors = ["Valentin Bersier <vbersier@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7.1,<4.0"
importlib-metadata = {version="^4.0.1", python="<3.8"}
web3 = "^5.19.0"
loguru = "^0.5.3"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = { version = "*", allow-prereleases = true }
mypy = ">=0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
